fix layout problem under Chrome Android

--- a/application/static/css/device.css
+++ b/application/static/css/device.css
@@ -2,6 +2,7 @@
     .avatar {
         height: 1.5em;
         width: 1.5em;
+        margin: 0 0 0 -2em;
     }
 
     .avatar img {
