--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -100,7 +100,7 @@ ul.about {
     width: 48px;
     border: 0;
     float: left;
-    margin: 0 -48px 0 -52px;
+    margin: 0 0 0 -52px;
 }
 
 .status {
